# adventofcode

./: .gitignore
2015/day01/src/: lib.rs  main.rs
2015/day02/: Cargo.toml
2015/day02/src/: lib.rs  main.rs  puzzle.rs
2015/day03/: Cargo.toml
2015/day03/src/: lib.rs  main.rs  puzzle.rs
2015/day04/: Cargo.toml
2015/day04/src/: lib.rs  main.rs  puzzle.rs
2015/day05/src/: lib.rs  puzzle.rs
2015/day06/: Cargo.toml
2015/day06/src/: lib.rs  main.rs  puzzle.rs
2015/day07/: Cargo.toml
2015/day07/src/: lib.rs  main.rs  puzzle.rs
2015/day08/: Cargo.toml
2015/day08/src/: lib.rs  main.rs  puzzle.rs
2015/day09/: Cargo.toml
2015/day09/src/: lib.rs  main.rs  puzzle.rs
2015/day1/: Cargo.toml
2015/day1/src/: lib.rs  puzzle.rs
2015/template/: Cargo.toml
2015/template/src/: lib.rs  puzzle.rs
2021/day1/sonar/: Cargo.toml
2021/day10/syntax2/: Cargo.toml
2021/day11/octopi/: Cargo.toml
2021/day12/pathing2/: Cargo.toml
2021/day13/origami/: Cargo.toml
2021/day13/origami2/: Cargo.toml
2021/day14/polymers2/: Cargo.toml
2021/day14/polymers2/src/: lib.rs  main.rs  parser.rs  polymers.rs
2021/day15/chiton2/: Cargo.toml
2021/day16/packets/: Cargo.toml
2021/day18/snailfish/: Cargo.toml
2021/day2/submarine2/: Cargo.toml
2021/day3/diagnostic2/: Cargo.toml
2021/day4/bingo/: Cargo.toml
2021/day5/vents/: Cargo.toml
2021/day6/lanternfish/: Cargo.toml
2021/day7/crabs/: Cargo.toml
2021/day7/crabs2/: Cargo.toml
2021/day7/whale/: Cargo.toml
2021/day8/seven_segments/: Cargo.toml
2021/day9/lava_tubes/: Cargo.toml
2021/day9/lava_tubes/src/: lib.rs  map.rs
2021/template/: Cargo.toml
2021/template/src/: config.rs  lib.rs
2024/day01/src/: lib.rs  main.rs
2024/day02/: Cargo.toml
2024/day03/src/: lib.rs  main.rs
2024/day04/: Cargo.toml
2024/day04/src/: cross_search.rs  lib.rs  main.rs  word_search.rs
2024/day05/: Cargo.toml
2024/day05/src/: lib.rs  main.rs  print_job.rs
2024/day06/: Cargo.toml
2024/day06/src/: guard.rs  lib.rs  main.rs
2024/day07/: Cargo.toml
2024/day07/src/: calibration.rs  lib.rs  main.rs
2024/day08/: Cargo.toml
2024/day08/src/: city_map.rs  lib.rs  main.rs
2024/day09/: Cargo.toml
2024/day09/src/: disk_map.rs  lib.rs  main.rs
2024/day1/: Cargo.toml
2024/day1/src/: lib.rs
2024/day10/: Cargo.toml
2024/day10/src/: lib.rs  main.rs  topographic_map.rs
2024/day11/: Cargo.toml
2024/day11/src/: lib.rs  main.rs  stones.rs
2024/day12/: Cargo.toml
2024/day12/src/: garden.rs  lib.rs  (+1 more)
2024/day13/: Cargo.toml
2024/day13/src/: crane_game.rs  lib.rs  main.rs
2024/day14/: Cargo.toml
2024/day15/: Cargo.toml
2024/day16/: Cargo.toml
2024/day17/: Cargo.toml
2024/day18/: Cargo.toml
2024/day19/: Cargo.toml
2024/day20/: Cargo.toml
2024/day21/: Cargo.toml
2024/day21/src/: keypad.rs  lib.rs  main.rs
2024/day22/: Cargo.toml
2024/day23/: Cargo.toml
2024/day24/: Cargo.toml
2024/day25/: Cargo.toml
2024/day3/: Cargo.toml
2024/day3/src/: lib.rs
2024/template/: Cargo.toml
day1/sonar2/: Cargo.toml
template/: Cargo.toml
(+111 files in other folders)
