[package]
name = "advent_of_code_2015_day_4"
version = "0.1.0"
authors = ["Scott Baldwin <sbaldwin621@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
md5 = { version = "0.8.0" }
thiserror = "2.0.12"