[package]
name = "advent_of_code_2024_day_13"
version = "0.1.0"
authors = ["Scott Baldwin <sbaldwin621@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
regex = { version = "1.11.1" }
thiserror = "2.0.3"