[package]
name = "polymers"
version = "0.1.0"
authors = ["Scott Baldwin <sbaldwin621@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.0", features = ["derive"] }
indoc = "1.0.3"
itertools = "0.10.3"
nom = "7.1.0"
thiserror = "1.0"